Fixed header image to not repeat and stretch to fill container

--- a/app/assets/stylesheets/profile_page/profile_page.scss
+++ b/app/assets/stylesheets/profile_page/profile_page.scss
@@ -10,6 +10,9 @@
   width: 1240px;
   height: 260px;
   position: absolute;
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
 }
 
 .profileHeader{
